--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <header>
   <h1><strong>Sportnews</strong></h1>
   <p><em>always in game</em></p>
-  <a href="#inst" onclick="window.open('https://www.instagram.com/'+ window.location.href +'')">Instagram</a>
-  <a href="#twitter" onclick="window.open('https://twitter.com/?lang=ru'+ window.location.href +'')">Twitter</a>
-  <a href="#facebook" onclick="window.open('https://ru-ru.facebook.com/'+ window.location.href +'')">Facebook</a>
-  <a href="#vk" onclick="window.open('https://vk.com/'+ window.location.href +'')">VK</a>
+  <a href="#inst">Instagram</a>
+  <a href="#twitter">Twitter</a>
+  <a href="#facebook">Facebook</a>
+  <a href="#vk">VK</a>
   <a href="tel:+72283221337">  +7 (228) 322 13 37</a>
   <nav>
     <ul>
