--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <header>
   <h1><strong>Sportnews</strong></h1>
   <p><em>always in game</em></p>
-  <a href="#inst">Instagram</a>
-  <a href="#twitter">Twitter</a>
-  <a href="#facebook">Facebook</a>
-  <a href="#vk">VK</a>
-  <a href="tel:+72283221337">  +7 (228) 322 13 37</a>
+  <a href="#">Instagram</a>
+  <a href="#">Twitter</a>
+  <a href="#">Facebook</a>
+  <a href="#">VK</a>
+  <a href="#">  +7 (228) 322 13 37</a>
   <nav>
     <ul>
       <li><a href="#">Главная</a></li>
