deleted ononclick, strong

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-  <h1><strong>Sportnews</strong></h1>
+  <h1>Sportnews</h1>
   <p><em>always in game</em></p>
   <a href="#">Instagram</a>
   <a href="#">Twitter</a>
