redid some styles and classes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body class="body">
 <header class="header">
-  <img src="logo.png"  alt="error">
-  <h1 class="heading">Sportnews</h1>
+  <img class="homepage_logo" src="logo.png"  alt="error">
+  <h1 class="heading_name">Sportnews</h1>
   <p><em>always in game</em></p>
   <div class="social_links">
     <a class="social_item" href="#">Instagram</a>
@@ -18,12 +18,12 @@
     <a class="social_item" href="#">VK</a>
     <a class="social_item" href="#">  +7 (228) 322 13 37</a>
   </div>
-  <nav class = "navigation">
-    <ul class="navigation_list">
-      <li><a class="navigation_item" href="#">Главная</a></li>
-      <li><a class="navigation_item" href="#">О нас</a></li>
-      <li><a class="navigation_item" href="#">Контакты</a></li>
-      <li><a class="navigation_item" href="#">Поиск</a></li>
+  <nav class="homepage__main__navigation">
+    <ul class="homepage__main__navigation__list">
+      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="">Главная</a></li>
+      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="#">Контакты</a></li>
+      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="#">Поиск</a></li>
+      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="#">О нас</a></li>
     </ul>
   </nav>
 </header>
