added text-transform, text styles, redid font-color

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Новости спорта</title>
   <link rel="stylesheet" href="css/styles.css">
@@ -18,12 +19,12 @@
     <a class="social_item" href="#">VK</a>
     <a class="social_item" href="#">  +7 (228) 322 13 37</a>
   </div>
-  <nav class="homepage__main__navigation">
-    <ul class="homepage__main__navigation__list">
-      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="">Главная</a></li>
-      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="#">Контакты</a></li>
-      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="#">Поиск</a></li>
-      <li class="homepage__main__navigation__list__item"><a class="homepage__main__navigation__list__item__element" href="#">О нас</a></li>
+  <nav class="navigation">
+    <ul class="homepage_navigation">
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="">Главная</a></li>
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Контакты</a></li>
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Поиск</a></li>
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">О нас</a></li>
     </ul>
   </nav>
 </header>
@@ -76,7 +77,7 @@
     <h2>Цитата:</h2>
   <blockquote class="blockquote">
     <q><em>Одна ошибка и ты ОШИБСЯ</em></q>
-    <cite>-Криштиану Роналду</cite>
+    <cite>--Криштиану Роналду</cite>
   </blockquote>
   </section>
   <section class="formula">
