added active.js, made adaptivity, redid some styles.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <script src="./script/load_time.js"></script>
   <script src="./script/mouse.js"></script>
+  <script src="./script/active.js"></script>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -144,22 +145,22 @@
         <div class="table_item"><p class="component-name">8</p></div>
         <div class="table_item"><p class="component-name">8</p></div>
       </div>
-      <div class="table grid-item">
-        <div class="table_header">Забито голов</div>
-        <div class="table_item"><p class="component-name">13</p></div>
-        <div class="table_item "><p class="component-name">15</p></div>
-        <div class="table_item"><p class="component-name">16</p></div>
-        <div class="table_item"><p class="component-name">12</p></div>
-        <div class="table_item"><p class="component-name">11</p></div>
-        <div class="table_item"><p class="component-name">10</p></div>
-        <div class="table_item"><p class="component-name">13</p></div>
-        <div class="table_item"><p class="component-name">16</p></div>
-        <div class="table_item"><p class="component-name">16</p></div>
-        <div class="table_item"><p class="component-name">13</p></div>
-        <div class="table_item"><p class="component-name">8</p></div>
-        <div class="table_item"><p class="component-name">7</p></div>
-        <div class="table_item"><p class="component-name">7</p></div>
-        <div class="table_item"><p class="component-name">8</p></div>
+      <div class="table grid-item_scored">
+        <div class="table_header_scored">Забито голов</div>
+        <div class="table_item_scored"><p class="component-name">13</p></div>
+        <div class="table_item_scored "><p class="component-name">15</p></div>
+        <div class="table_item_scored"><p class="component-name">16</p></div>
+        <div class="table_item_scored"><p class="component-name">12</p></div>
+        <div class="table_item_scored"><p class="component-name">11</p></div>
+        <div class="table_item_scored"><p class="component-name">10</p></div>
+        <div class="table_item_scored"><p class="component-name">13</p></div>
+        <div class="table_item_scored"><p class="component-name">16</p></div>
+        <div class="table_item_scored"><p class="component-name">16</p></div>
+        <div class="table_item_scored"><p class="component-name">13</p></div>
+        <div class="table_item_scored"><p class="component-name">8</p></div>
+        <div class="table_item_scored"><p class="component-name">7</p></div>
+        <div class="table_item_scored"><p class="component-name">7</p></div>
+        <div class="table_item_scored"><p class="component-name">8</p></div>
       </div>
     </div>
   </section>
