--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" href="css/styles.css">
 <head>
   <script src="./script/load_time.js"></script>
+  <script src="./script/mouse.js"></script>
+  <script src="./script/active.js"></script>
   <title>Контакты</title>
   <style>
     body {
@@ -27,7 +29,6 @@
   </style>
 </head>
   <!DOCTYPE html>
-  <html lang="ru">
   <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
@@ -50,7 +51,7 @@
     <nav class="navigation">
       <ul class="homepage_navigation">
         <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
-        <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Контакты</a></li>
+        <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="contacts.html">Контакты</a></li>
         <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Поиск</a></li>
         <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">О нас</a></li>
       </ul>
