--- a/cyber.html
+++ b/cyber.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
   <script src="./script/load_time.js"></script>
+  <script src="./script/mouse.js"></script>
+  <script src="./script/active.js"></script>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
   <title>Новости о киберспорте</title>
@@ -21,7 +23,7 @@
   <nav class="navigation">
     <ul class="homepage_navigation">
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="index.html">Главная</a></li>
-      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Контакты</a></li>
+      <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="contacts.html">Контакты</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">Поиск</a></li>
       <li class="homepage_navigation_list"><a class="homepage_navigation_list_item" href="#">О нас</a></li>
     </ul>
