--- a/football.html
+++ b/football.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
   <script src="./script/load_time.js"></script>
+  <script src="./script/mouse.js"></script>
+  <script src="./script/active.js"></script>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
