added templates, random_start, redid preloader for dataLoader.js

--- a/cyber.html
+++ b/cyber.html
@@ -67,6 +67,13 @@
      width: 120px;
      height: 120px;
      animation: spin 2s linear infinite;"></div>
+      <template id="userTemplate">
+        <div class="user">
+          <p class="email"></p>
+          <p class="theme"></p>
+          <p class="comment"></p>
+        </div>
+      </template>
       <button id="refresh" class="button" style="display: none;">Обновить комментарии</button>
     </ul>
   </section>
